--- a/success/index.html
+++ b/success/index.html
@@ -8,7 +8,7 @@
   <section>
     <p>
       We appreciate your business! If you have any questions, please email
-      <a href="mailto:orders@example.com">ixvipcs@gmail.com</a>.
+      <a href="mailto:ixvipcs@gmail.com">ixvipcs@gmail.com</a>.
     </p>
   </section>
 </body>
