--- a/checkout.html
+++ b/checkout.html
@@ -1,32 +1,24 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Choose Your PC Tier</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <section style="text-align:center; margin-top:50px;">
+<section>
+  <h1>Choose Your PC Tier</h1>
 
-      <h1>Choose Your PC Tier</h1>
+  <div>
+    <h2>Basic</h2>
+    <form action="https://kbuwwuc7rkeoiy6alby4dlozv40popar.lambda-url.us-east-1.on.aws/" method="POST">
+      <button type="submit">Buy Basic</button>
+    </form>
+  </div>
 
-      <!-- Basic -->
-      <form action="https://kbuwwuc7rkeoiy6alby4dlozv40popar.lambda-url.us-east-1.on.aws/" method="POST" style="margin:20px;">
-        <input type="hidden" name="priceId" value="price_1SzLUFB2XNuxbxPuJYnYkM0y">
-        <button type="submit">Basic PC</button>
-      </form>
+  <div>
+    <h2>Pro</h2>
+    <form action="https://tzi3uwdousq55sf7bvkzzypu3q0xrubs.lambda-url.us-east-1.on.aws/" method="POST">
+      <button type="submit">Buy Pro</button>
+    </form>
+  </div>
 
-      <!-- Pro -->
-      <form action="https://kbuwwuc7rkeoiy6alby4dlozv40popar.lambda-url.us-east-1.on.aws/" method="POST" style="margin:20px;">
-        <input type="hidden" name="priceId" value="price_1SzLZLB2XNuxbxPuMgEVQtwH">
-        <button type="submit">Pro PC</button>
-      </form>
-
-      <!-- Ultra -->
-      <form action="https://kbuwwuc7rkeoiy6alby4dlozv40popar.lambda-url.us-east-1.on.aws/" method="POST" style="margin:20px;">
-        <input type="hidden" name="priceId" value="price_1SzLcMB2XNuxbxPuV9k2wx4W">
-        <button type="submit">Ultra PC</button>
-      </form>
-
-    </section>
-  </body>
-</html>
+  <div>
+    <h2>Ultra</h2>
+    <form action="https://qznaaxgo5mhsvucwxeiol5p2x40mesxg.lambda-url.us-east-1.on.aws/" method="POST">
+      <button type="submit">Buy Ultra</button>
+    </form>
+  </div>
+</section>
