--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         buttons.forEach(b => b.disabled = true);
 
         // instantly go to loading page with target URL
-        window.location.href = "/loading.html?target=" + encodeURIComponent(button.dataset.url);
+        window.location.href = "/loading?target=" + encodeURIComponent(button.dataset.url);
       });
     });
   </script>
