--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Choose Your PC Tier</title>
+  <title>Order</title>
 
   <style>
     body {
@@ -52,7 +52,7 @@
 </head>
 <body>
 
-  <h1>Choose Your PC Tier</h1>
+  <h1>Order</h1>
 
   <button class="button buy"
     data-url="https://kbuwwuc7rkeoiy6alby4dlozv40popar.lambda-url.us-east-1.on.aws/">
